finished footer issues. fixed Firefox and IE layout breaking CSS bugs (required making the media query min-width viewport slightly wider than the .archive max-width)

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ textarea {
 
 body {
   height: 100%;
-  margin: 0 auto 3em;
+  margin: 0 auto 1em;
   max-width: 100%; /* Responsive resizing */
 }
 
@@ -94,9 +94,21 @@ nav ul li:last-child {
 }
 
 .post {
-  margin: 1em auto 3em;
+  margin: 1em auto 0;
   max-width: 42em;
-  padding: 1em 5% 3em;
+  padding: 1em 5% 2em;
+}
+
+.contentinfo {
+  clear: both;
+  margin: 0 auto;
+  padding: 2em 0;
+}
+
+.contentinfo ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 0 .5em;
 }
 
 
@@ -152,6 +164,7 @@ blockquote {
 
 .banner h1 {
   font-size: 1.75em;
+  line-height: 1.5;
 }
 
 .banner h2 {
@@ -187,6 +200,20 @@ nav {
 
 .post p {
   padding-bottom: .5em;
+}
+
+.contentinfo {
+  color: hsla(138, 10%, 85%, 1);
+  font: normal 400 .875em/2 'Calluna Sans', 'Open Sans', Calibri, sans-serif;
+  text-align: center;
+}
+
+.contentinfo ul {
+  font-size: 1.142857143em;
+}
+
+.contentinfo a {
+    text-decoration: none;
 }
 
 
@@ -274,8 +301,8 @@ nav {
 
 }
 
-@media screen and (min-width: 42em) {
-  /* i.e. 672px */
+@media screen and (min-width: 44em) {
+  /* i.e. 704px */
 
   .banner,
   .post {
@@ -303,8 +330,8 @@ nav {
 
 }
 
-@media screen and (min-width: 52em) {
-  /* i.e. 832px */
+@media screen and (min-width: 54em) {
+  /* i.e. 864px */
 
   .archive {
     max-width: 52em;
